# ObjectNat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  README_RU.rst  README_ru.md  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  versions.json
.github/workflows/: ci_pipeline.yml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/api/: index.html
0.1.0/search/: search_index.json
0.1.0/usage/clustering/: index.html
0.1.0/usage/coverage/: index.html
0.1.0/usage/isochrones/: index.html
0.1.0/usage/noise/: index.html
0.1.0/usage/provision/: index.html
0.1.0/usage/visibility/: index.html
0.1.1/: 404.html  api.html  index.html  objects.inv  sitemap.xml
0.1.1/search/: search_index.json
0.1.1/usage/: clustering.html  coverage.html  isochrones.html  noise.html  provision.html  visibility.html
_modules/: index.html
_modules/objectnat/methods/coverage_zones/: graph_coverage.html  radius_voronoi_coverage.html  stepped_coverage.html
_modules/objectnat/methods/isochrones/: isochrones.html
_modules/objectnat/methods/noise/: noise_simulation.html  noise_simulation_simplified.html
_modules/objectnat/methods/point_clustering/: cluster_points_in_polygons.html
_modules/objectnat/methods/provision/: provision.html
_modules/objectnat/methods/visibility/: visibility_analysis.html
_sources/: index.rst.txt
_sources/methods/: clustering.rst.txt  isochrones.rst.txt
_sources/methods/examples/: calculate_adjacency_matrix.ipynb.txt  clustering.ipynb.txt  coverage.ipynb.txt  index.rst.txt  visibility.ipynb.txt
dev/: new_cov_zones.ipynb
docs/: api.md  conf.py  index.md  index.rst
docs/examples/: calculate_adjacency_matrix.ipynb  calculate_provision.ipynb  coverage_zones.ipynb  isochrone_generator.ipynb  visibility_analysis.ipynb
docs/examples/examples_data/: buildings.parquet  matrix_time.parquet
docs/methods/: coverage.rst  noise.rst  provision.rst  visibility.rst
docs/methods/examples/: isochrones.ipynb  noise.ipynb  provision.ipynb
docs/usage/: clustering.md  clustering.rst  coverage.md  coverage.rst  isochrones.md  isochrones.rst  noise.md  noise.rst  provision.md  provision.rst  visibility.md  visibility.rst
examples/: calculate_adjacency_matrix.ipynb  calculate_provision.ipynb  coverage_zones.ipynb  download_buildings_from_osm.ipynb  get_any_graph.ipynb  graph_generator.ipynb  isochrone_generator.ipynb  noise_simulation.ipynb  point_clusterization.ipynb  restore_population.ipynb  visibility_analysis.ipynb
examples/examples_data/: adjacency_matrix.csv  buildings.parquet  matrix.parquet  matrix_time.parquet  services.parquet  spb_buildings.parquet  spb_services.parquet  taraIntermodal.graphml  tara_buildings.geojson  tara_kinder.geojson  trees.parquet
methods/: clustering.html  coverage.html  isochrones.html  noise.html  provision.html  visibility.html
methods/examples/: calculate_adjacency_matrix.html  clustering.html  coverage.html  index.html  isochrones.html  noise.html  provision.html  visibility.html
src/objectnat/: __init__.py  _api.py  _config.py  main.py
src/objectnat/methods/: Echo_sim.ipynb  adjacency_matrix.py  all_buildings.parquet  balanced_buildings.py  cluster_points_in_polygons.py  coverage_zones.py  demands.py  isochrones.py  living_buildings_osm.py  osm_graph.py  provision.py  tree.geojson  visibility_analysis.py
src/objectnat/methods/coverage_zones/: __init__.py  coverage_zones.py  graph_coverage.py  radius_voronoi.py  radius_voronoi_coverage.py  stepped.py  stepped_coverage.py
src/objectnat/methods/isochrones/: __init__.py  isochrone_utils.py  isochrones.py
src/objectnat/methods/noise/: __init__.py  noise_exceptions.py  noise_init_data.py  noise_reduce.py  noise_sim.py  noise_simulation.py  noise_simulation_simplified.py
src/objectnat/methods/point_clustering/: __init__.py  cluster_points_in_polygons.py
src/objectnat/methods/provision/: __init__.py  city_provision.py  provision.py  provision_exceptions.py  provision_model.py
src/objectnat/methods/utils/: __init__.py  geom_utils.py  graph_utils.py  math_utils.py
src/objectnat/methods/visibility/: __init__.py  visibility_analysis.py
src/objectnat/utils/: __init__.py  utils.py
src/tests/: conftest.py  fixtures.py  test_clusterization.py  test_coverage_zones.py  test_isochrones.py  test_noise_simulation.py  test_provision.py  test_utils.py  test_visibility.py
