[tool.poetry]
name = "ObjectNat"
version = "0.2.1"
description = "ObjectNat is an open-source library created for geospatial analysis created by IDU team"
license = "BSD-3-Clause"
authors = ["DDonnyy <63115678+DDonnyy@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "objectnat", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23.5"
pandas = "^2.2.0"
geopandas = "^0.14.3"
tqdm = "^4.66.2"
pandarallel = "^1.6.5"
networkx = "^3.2.1"
networkit = "^11.0"
pulp = "^2.8.0"
population-restorator = "^0.2.3"
iduedu = "^0.1.4"
joblib = "^1.4.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
extension-pkg-allow-list = ["networkit"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import"
]
good-names = [

]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]