[tool.poetry]
name = "ObjectNat"
version = "1.2.0"
description = "ObjectNat is an open-source library created for geospatial analysis created by IDU team"
license = "BSD-3-Clause"
authors = ["DDonnyy <63115678+DDonnyy@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "objectnat", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1.3"
pandas = "^2.2.0"
geopandas = "^1.0.1"
tqdm = "^4.66.2"
pandarallel = "^1.6.5"
networkx = "^3.4.2"
scikit-learn = "^1.4.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
iduedu = "^0.5.0"
pyarrow = "^19.0.1"
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
jupyter = "^1.0.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pre-commit = "^4.2.0"
folium = "^0.19.5"
matplotlib = "^3.10.1"
mapclassify = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
extension-pkg-allow-list = ["networkit"]
disable = [
    "duplicate-code",
    "too-many-positional-arguments",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]